# open_spiel_to_wasm

./: CMakeLists.txt  Documento sem título 1  README  diary.md
catch_porting/: CMakeLists.txt  Pensamentos.md  README_CATCH.MD
catch_porting/build.em/: CMakeCache.txt  Makefile  cmake_install.cmake  index.html
catch_porting/build.em/src/: Catch.js  Catch.wasm  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/algorithm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/base/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/cleanup/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/container/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/crc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/debugging/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/flags/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/functional/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/hash/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/log/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/memory/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/meta/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/numeric/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/profiling/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/random/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/status/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/strings/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/synchronization/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/time/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/types/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/build.em/src/open_spiel/abseil-cpp/absl/utility/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catch_porting/salvar/: CMakeLists.txt
catch_porting/src/: CMakeLists.txt  main.cc
catch_porting/src/headfiles/: RenderWindow.cc  RenderWindow.h
catch_porting/src/open_spiel/includes/: catch.cc  catch.h  spiel_utils.cc  spiel_utils.h
src/: example.cc  example2.cc  example_porting.cc
src/emctest/: maininput.js
src/emctest/porting_tests/: maininput.cc
src/emctest/std::vector/: vector.html
src/emctest/struct/: example.cc  example.wasm
src/emctest/tic_tac_toe_wasm/: events.js  tic.css
src/head_files/: game_parameters.cc  game_parameters.h  observer.h  spiel.cc  spiel.h  spiel_globals.h  spiel_utils.h  tensor_view.h  tic_tac_toe.cc
tic_tac_toe_porting/: CMakeLists.txt  diary.md  explicação.txt
tic_tac_toe_porting/build.not_ignore/: Game_example  Game_example.js  Game_example.wasm
tic_tac_toe_porting/src/: example.cc  example_porting.cc
tic_tac_toe_porting/src/emctest/porting_tests/: maininput.html  maininput.wasm  mainloop.cc
tic_tac_toe_porting/src/emctest/std::vector/: my_module.js  my_module.wasm  vector.cc
tic_tac_toe_porting/src/emctest/struct/: example  example.cc  example.js  struct.html
tic_tac_toe_porting/src/emctest/tic_tac_toe_wasm/: tic.css  tic_tac_toe_wasm.html
tic_tac_toe_porting/src/head_files/: game_parameters.h  minimax.cc  minimax.h  observer.cc  tic_tac_toe.h
